syntax = "proto3";

package cart;

service CartService {
  // Operación para OrderService: vaciar carrito después de compra exitosa
  rpc ClearCart (ClearCartRequest) returns (CartResponse);
  
  // Operaciones internas para validar con CatalogService
  rpc GetCartItems (GetCartRequest) returns (CartItemsResponse);
  
  // Validar disponibilidad y precios antes de checkout
  rpc ValidateCart (ValidateCartRequest) returns (ValidateCartResponse);
}

message ClearCartRequest {
  string user_id = 1;
}

message CartResponse {
  bool success = 1;
  string message = 2;
}

message GetCartRequest {
  string user_id = 1;
}

message CartItem {
  string book_id = 1;
  string title = 2;
  int32 quantity = 3;
  double price = 4;
}

message CartItemsResponse {
  repeated CartItem items = 1;
  double total = 2;
}

message ValidateCartRequest {
  string user_id = 1;
}

message ValidateCartResponse {
  bool valid = 1;
  repeated string errors = 2; // Ej: "Book X out of stock", "Price changed"
  double updated_total = 3;
}